[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=2]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	if (active)
		COLOR = vec4(0.5, 0.5, 0.5, 0.0);
	COLOR.a = texture(TEXTURE, UV).a;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/active = false

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )
Button/colors/font_color = Color( 0.721569, 0.721569, 0.721569, 1 )
Button/colors/font_color_pressed = Color( 0.345098, 0.533333, 0.984314, 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 6 )

[node name="Menu" type="Control"]
material = SubResource( 8 )
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
anchor_bottom = 0.253
margin_left = -118.0
margin_top = 296.0
margin_right = -1.0
margin_bottom = 457.88

[node name="start" type="Button" parent="VBoxContainer"]
use_parent_material = true
margin_right = 117.0
margin_bottom = 40.0
focus_neighbour_top = NodePath("../quit")
button_mask = 0
text = "Start"
align = 0

[node name="options" type="Button" parent="VBoxContainer"]
use_parent_material = true
margin_top = 44.0
margin_right = 117.0
margin_bottom = 84.0
button_mask = 0
text = "Options"
align = 0

[node name="credit" type="Button" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 117.0
margin_bottom = 128.0
button_mask = 0
text = "Credit"
align = 0

[node name="quit" type="Button" parent="VBoxContainer"]
use_parent_material = true
margin_top = 132.0
margin_right = 117.0
margin_bottom = 172.0
focus_neighbour_bottom = NodePath("../start")
button_mask = 0
text = "Quit"
align = 0

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="focus_entered" from="VBoxContainer/start" to="." method="_on_start_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/start" to="." method="_on_start_focus_exited"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="focus_entered" from="VBoxContainer/options" to="." method="_on_options_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/options" to="." method="_on_options_focus_exited"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="VBoxContainer/credit" to="." method="_on_credit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/credit" to="." method="_on_credit_focus_exited"]
[connection signal="pressed" from="VBoxContainer/credit" to="." method="_on_credit_pressed"]
[connection signal="focus_entered" from="VBoxContainer/quit" to="." method="_on_quit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/quit" to="." method="_on_quit_focus_exited"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
